genel testler yapıldı hatalar giderildi

--- a/Library.Admin/Views/BookRequestsPanel/Index.cshtml
+++ b/Library.Admin/Views/BookRequestsPanel/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="page-title">Kitap İstekleri Listesi</h2>
+<h2 class="page-title">Book requests List</h2>
 <div class="page-bar">
     <ul class="page-breadcrumb">
         Book requests in the system are listed below.
