--- a/Library.Admin/Views/BooksPanel/Index.cshtml
+++ b/Library.Admin/Views/BooksPanel/Index.cshtml
@@ -4,10 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="page-title">Kullanıcı Listesi</h2>
+<h2 class="page-title">Books List</h2>
 <div class="page-bar">
     <ul class="page-breadcrumb">
-        Sistemde bulunan kitaplar aşağıda listelenmiştir.
+        The books in the system are listed below.
     </ul>
     <div class="page-toolbar">
         <div class="btn-group pull-right">
