--- a/Library.Admin/Views/BorrowedBooksPanel/Index.cshtml
+++ b/Library.Admin/Views/BorrowedBooksPanel/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<h2 class="page-title">Kullanıcı Listesi</h2>
+<h2 class="page-title">Borrowed Books list</h2>
 <div class="page-bar">
     <ul class="page-breadcrumb">
         Borrowed books in the system are listed below.
