--- a/Library.Admin/Views/UserPanel/Index.cshtml
+++ b/Library.Admin/Views/UserPanel/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="page-title">Kullanıcı Listesi</h2>
+<h2 class="page-title">Users List</h2>
 <div class="page-bar">
     <ul class="page-breadcrumb">
         The users in the system are listed below.
