--- a/Library.Admin/Views/UserPanel/Create.cshtml
+++ b/Library.Admin/Views/UserPanel/Create.cshtml
@@ -122,7 +122,7 @@
                         <div class="form-group">
                             <label class="control-label col-md-3">User Type</label>
                             <div class="col-md-9">
-                                @Html.DropDownList("UserTypeID", null, "Kullanıcı tipini seçiniz", new { @class = "form-control ", @id = "UserTypeID", @name = "UserTypeID", @required = true })
+                                @Html.DropDownList("UserTypeID", null, "Select User Type", new { @class = "form-control ", @id = "UserTypeID", @name = "UserTypeID", @required = true })
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         <div class="form-group">
                             <label class="control-label col-md-3">Campus</label>
                             <div class="col-md-9">
-                                @Html.DropDownList("CampusID", null, "Kampüs seçiniz", new { @class = "form-control ", @id = "CampusID", @name = "CampusID", @required = true })
+                                @Html.DropDownList("CampusID", null, "Select Campus", new { @class = "form-control ", @id = "CampusID", @name = "CampusID", @required = true })
                             </div>
                         </div>
                     </div>
