--- a/Library.Admin/Views/ReportsPanel/Index.cshtml
+++ b/Library.Admin/Views/ReportsPanel/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="portlet light">
             <div class="portlet-title">
                 <div class="caption font-dark">
-                    <span class="caption-subject uppercase">Raporlar</span>
+                    <span class="caption-subject uppercase">Reports</span>
                 </div>
                 <div class="col-md-12 FilterAreaListItem">
                     <div class="col-md-2" style="padding:0px;">
